--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,87 @@
-.container {
-  padding: 0 2rem;
+.login_container{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: rgb(127,17,251);
+background: linear-gradient(135deg, rgba(127,17,251,1) 35%, rgba(49,125,215,1) 65%);
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.heading{
+  color: white;
+}
+
+.form_wrapper{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: whitesmoke;
+  padding: 1rem;
+  width: 60%;
+  border-radius: 20px;
+}
+
+.user_img{
+  width: 300px;
+  height: 300px;
+  margin: 1rem;
+}
+
+.form_container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 1rem;
+  height: 300px;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.input{
+  margin-top: -1rem;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  border-bottom: 2px solid blue;
+  padding-bottom: .5rem;
+  background-color: whitesmoke;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.input:placeholder-shown{
+  color: blue
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
+.select{
+  outline: 0;
+  border: 2px solid blue;
+  padding: .5rem;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.login_btn{
+  outline: 0;
+  border: 2px solid rgba(127,17,251,1);
+  background:transparent;
+  width: 70%;
+  border-radius: 15px;
+  padding: 1rem;
+  color: rgba(127,17,251,1);
+  font-weight: bold;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.login_btn:hover{
+  background: linear-gradient(135deg, rgba(127,17,251,1) 35%, rgba(49,125,215,1) 65%);
+  color: white;
+  border: 2px solid whitesmoke;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
+@media screen and (max-width:850px){
+  .form_wrapper{
     flex-direction: column;
+  }
+  .user_img{
+    width: 100px;
+    height: 100px;
   }
 }
